# QuanEstimation

./: .Dockerfile  .gitignore  .travis.yml  404.html  AUTHORS.rst  CONTRIBUTING.rst  Copt_singleparameter.py  Dockerfile  HISTORY.rst  LICENSE  Lout.npy  MANIFEST.in  Makefile  QFI_illustration.py  README.md  README.rst  control_optimization_qubit.ipynb  controls_T2.jld  ctrl_auto_T2.csv  docker-compose.yaml  eg.py  f_auto_T2.csv  index.html  juliacalldeps.json  juliapkg.json  mkdocs.yml  objects.inv  pout.npy  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  sitemap.xml  test-results.xml  test.py  test_GRAPE.py  test_HCRB.py  test_OBB.py  test_adaptMZI.py  (+35 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: ISSUE_TEMPLATE.md
AsymptoticBound/: CramerRao.py
Control/: DDPG.py  GRAPE.py  GRAPE_AD.py  GRAPE_without_adam.py
Dynamics/: dynamics.jl  dynamics.py  dynamics_AD.py  learning_env.py
QuanEstimation_v6/: learning_script.ipynb  main.py  test_GRAPE_singleparameter.ipynb  test_Liouville_c.ipynb  test_learning_env.py
QuanResources/: QuanResources.py
citing/: index.html
css/: extra.css  julia_api.css
developers/: index.html
docs/: Makefile  citing.md  conf.py  developers.md  examples.md  index.md  index.rst  installation.md  installation.rst  make.bat  usage.rst
examples/: Bayesian_CramerRao_bounds.ipynb  Bayesian_bounds_multiparameter.jl  Bayesian_bounds_multiparameter.py  Bayesian_bounds_singleparameter.jl  Bayesian_bounds_singleparameter.py  Bayesian_estimation.ipynb  Bayesian_estimation_multiparameter.jl  Bayesian_estimation_multiparameter.py  Bayesian_estimation_singleparameter.jl  Bayesian_estimation_singleparameter.py  Comopt_Kraus.py  Comopt_Kraus_multiparameter.py  Comopt_Kraus_singleparameter.py  Comopt_multiparameter.py  Comopt_singleparameter.py  Copt_multiparameter.py  Copt_singleparameter.py  CramerRao_bound.ipynb  HCRB.py  Holevo_CramerRao_bound.ipynb  Mopt_Kraus.py  Mopt_Kraus_multiparameter.py  Mopt_Kraus_singleparameter.py  Mopt_multiparameter.py  Mopt_singleparameter.py  OBB.jl  OBB.py  QFI_CFI.py  Sopt_Kraus.py  Sopt_Kraus_multiparameter.py  Sopt_Kraus_singleparameter.py  (+24 more)
(+643 files in other folders)
