[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quanestimation"
version = "0.2.8"
description = "A package for quantum parameter estimation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD 3-Clause License" }
authors = [
    { name = "QuanEstimation Group (Jing Liu et al.)", email = "liujing@hainanu.edu.cn" }
]
keywords = ["quanestimation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "pip>=19.2.3",
    "bump2version>=0.5.11",
    "wheel>=0.33.6",
    "numpy",
    "sympy",
    "scipy",
    "cvxpy",
    "juliacall>=0.9.26",
    "more_itertools",
    "julia_project",
    "h5py"
]

[project.urls]
Homepage = "https://github.com/QuanEstimation/QuanEstimation"

[project.scripts]
quanestimation = "quanestimation.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "codecov"
]
dev = [
    "bump2version>=0.5.11",
    "wheel>=0.33.6",
    "build",
    "pytest",
    "coverage",
    "codecov"    
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quanestimation*"]