[metadata]
name = quanestimation
version = 0.2.6
author = Jing Liu, Huai-Ming Yu, Mao Zhang, and others.
description = A package for quantum parameter estimation.

[bumpversion]
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:quanestimation/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
